running clock implementation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 	<script src="js/libs/TrackballControls.js"></script>
     <script src="js/libs/OrbitControls.js"></script>    
     <script src="js/libs/Tween.js"></script>
+    <script src="js/libs/FontLoader.js"></script>
+    <script src="js/libs/CSG.js"></script>
+    <script src="js/libs/TextGeometry.js"></script>
+    <!-- <script src="js/libs/CSG-lib.js"></script> -->
+
 
     <div id="container">
         <div id="main_viewer"></div>
@@ -29,7 +34,9 @@
   
     </div>
  
+    <script src="js/func/Entity.js"></script>
     <script src="js/func/init.js"></script>
+
     
 
     
